--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true"
     tools:context=".HomeActivity">
+
+    <!-- Toàn bộ phần giao diện hiện tại đưa vào đây -->
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/main"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/bottom_navigation"
+        android:fillViewport="true">
 
     <LinearLayout
         android:id="@+id/containerLayout"
@@ -116,13 +123,14 @@
             android:layout_marginTop="10dp"
             android:background="@android:color/transparent"
             app:cardCornerRadius="10dp"
-            app:cardUseCompatPadding="true">
+            app:cardUseCompatPadding="false">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="12dp">
+                android:padding="10dp"
+                >
 
                 <!-- DANH MỤC -->
                 <TextView
@@ -197,44 +205,66 @@
                     android:textStyle="bold" />
 
                 <!-- Danh sách sản phẩm -->
-                <GridView
+                <com.example.tranminhphat_2123110213.ExpandableHeightGridView
                     android:id="@+id/SanPhamNoiBat"
                     android:layout_width="match_parent"
-                    android:layout_height="600dp"
+                    android:layout_height="wrap_content"
                     android:numColumns="2"
                     android:verticalSpacing="8dp"
                     android:horizontalSpacing="8dp"
-                    android:padding="8dp"
-                    />
+                    android:stretchMode="columnWidth" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="8dp"
-                    android:text="Sản phẩm nổi bật"
+                    android:text="Sản phẩm mới"
                     android:textColor="#000000"
                     android:textSize="20sp"
                     android:textStyle="bold" />
+                <!-- Danh sách sản phẩm mới -->
+                <com.example.tranminhphat_2123110213.ExpandableHeightGridView
+                    android:id="@+id/SanPhamMoi"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:numColumns="2"
+                    android:verticalSpacing="8dp"
+                    android:horizontalSpacing="8dp"
+                    android:stretchMode="columnWidth" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="8dp"
-                    android:text="Sản phẩm nổi bật"
+                    android:text="Sản phẩm giảm giá"
                     android:textColor="#000000"
                     android:textSize="20sp"
                     android:textStyle="bold" />
-                <TextView
-                    android:layout_width="wrap_content"
+                <!-- Danh sách sản phẩm giảm giá-->
+                <com.example.tranminhphat_2123110213.ExpandableHeightGridView
+                    android:id="@+id/SanPhamGiamGia"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginBottom="8dp"
-                    android:text="Sản phẩm nổi bật"
-                    android:textColor="#000000"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
+                    android:numColumns="2"
+                    android:verticalSpacing="8dp"
+                    android:horizontalSpacing="8dp"
+                    android:stretchMode="columnWidth" />
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
-</ScrollView>
+    </androidx.core.widget.NestedScrollView>
+
+    <!-- Thanh công cụ ở dưới cùng -->
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        app:labelVisibilityMode="labeled"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="?android:attr/windowBackground"
+        app:itemIconTint="@color/selector_nav_color"
+        app:itemTextColor="@color/selector_nav_color"
+        app:menu="@menu/bottom_nav_menu" />
+</RelativeLayout>
