--- a/app/src/main/res/layout/item_products.xml
+++ b/app/src/main/res/layout/item_products.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cardViewSanPham"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="6dp"
     app:cardCornerRadius="12dp"
-    app:cardElevation="6dp">
+    app:cardElevation="3dp"
+    app:cardUseCompatPadding="true"
+    app:cardPreventCornerOverlap="false"
+    android:layout_margin="8dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,7 +20,8 @@
             android:id="@+id/imageViewSanPham"
             android:layout_width="match_parent"
             android:layout_height="140dp"
-            android:scaleType="centerCrop" />
+            android:scaleType="centerCrop"
+            android:contentDescription="@string/app_name" />
 
         <TextView
             android:id="@+id/textViewTen"
@@ -27,5 +31,23 @@
             android:textSize="13sp"
             android:textStyle="bold"
             android:textColor="#333333" />
+
+        <TextView
+            android:id="@+id/textViewGia"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="13sp"
+            android:textColor="#FF5722"
+            android:paddingTop="2dp" />
+
+        <TextView
+            android:id="@+id/textViewDaBan"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="12sp"
+            android:textColor="#757575"
+            android:paddingTop="2dp"
+            android:text="Đã bán: 0" />
     </LinearLayout>
+
 </androidx.cardview.widget.CardView>
