--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -38,9 +38,10 @@
             android:textColor="#000" />
 
         <TextView
+            android:id="@+id/textDelete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sửa"
+            android:text="Xóa"
             android:textColor="#FF5722"
             android:textSize="16sp" />
     </LinearLayout>
