--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -98,13 +98,14 @@
                     <EditText
                         android:layout_width="36dp"
                         android:layout_height="32dp"
-                        android:text="1"
-                        android:textSize="14sp"
+                        android:background="@android:color/transparent"
                         android:gravity="center"
                         android:inputType="number"
-                        android:background="@android:color/transparent"
                         android:padding="0dp"
-                        android:singleLine="true" />
+                        android:singleLine="true"
+                        android:text="1"
+                        android:textColor="@color/black"
+                        android:textSize="14sp" />
 
                     <com.google.android.material.button.MaterialButton
                         android:layout_width="32dp"
@@ -125,4 +126,9 @@
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#DDDDDD"
+        android:layout_marginTop="8dp"/>
 </LinearLayout>
